argo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"    
  name: argo-cd-ui
spec:
  rules:
    - host: argocd.192.168.1.220.nip.io
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
            path: /
